--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>MigzMusic</title>
     <link rel="stylesheet" href= "Assignment-Website/assets/styles/style.css">
 </head>
-<body>
+<body style="color: #0a0d14;">
     <div class="queenimage">
         <img src="Assignment-Website/assets/images/Queen image.png">
     </div>
@@ -15,20 +15,27 @@
         <div class="logo">
             <img src="Assignment-Website/assets/images/migzphotographycom-icon-only-white.png">
         </div>
-        <div class="NavBarWords">
-            <div class="Home">
-                <h1>Home</h1>
-            </div>
-            <div class="Blogs">
-                <h1>Blogs</h1>
-            </div>
-            <div class="About">
-                <h1>About Us</h1>
-            </div>
-            <div class="Contact Me">
-                <h1>Contact Us</h1>
-            </div>
+        <div class="Home">
+            <h1>Home</h1>
         </div>
+            <div class="Blogs">
+            <h1>Blogs</h1>
+        </div>
+        <div class="About">
+            <h1>About Us</h1>
+        </div>
+        <div class="Contact Me">
+            <h1>Contact Us</h1>
+        </div>
+        </div>
+    </div>
+
+    <div class="latestrelease">
+        <h1>Latest Release</h1>
+    </div>
+
+    <div class="listenhere">
+        <h1>Listen Here!</h1>
     </div>
 </body>
 </html>
