--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>MigzMusic</title>
     <link rel="stylesheet" href= "Assignment-Website/assets/styles/style.css">
 </head>
-<body style="color: #0a0d14;">
+<body>
     <div class="queenimage">
         <img src="Assignment-Website/assets/images/Queen image.png">
     </div>
@@ -36,6 +36,18 @@
 
     <div class="listenhere">
         <h1>Listen Here!</h1>
+    </div>
+
+    <div class="images">
+        <div class="strummingimg">
+        <img src="Assignment-Website/assets/images/Strumming 2023.jpg" alt="strummingimg">
+        </div>
+        <div class="originalimg">
+        <img src="Assignment-Website/assets/images/Original Songs.jpg" alt="originalimg">
+        </div>
+        <div class="coverimg">
+        <img src="Assignment-Website/assets/images/Cover Songs.jpg" alt="coverimg">
+        </div>
     </div>
 </body>
 </html>
