Labels and alignment

--- a/index.html
+++ b/index.html
@@ -49,5 +49,27 @@
         <img src="Assignment-Website/assets/images/Cover Songs.jpg" alt="coverimg">
         </div>
     </div>
+
+    <div class="labels">
+        <div class="Strumming2023">
+            <h1>Strumming 2023</h1>
+        </div>
+
+        <div class="Originalsongs">
+            <h1>Original Songs</h1>
+        </div>
+
+        <div class="Coversongs">
+            <h1>Cover Songs</h1>
+        </div>
+    </div>
+
+    <div class="AboutMe">
+        <img src="Assignment-Website/assets/images/316108166_452749393699009_5327315196689860143_n.jpg" alt="AboutMe">
+        <div class="aboutmetitle">
+            
+        </div>
+    </div>
+    </div>
 </body>
 </html>
