--- a/index.html
+++ b/index.html
@@ -66,8 +66,14 @@
 
     <div class="AboutMe">
         <img src="Assignment-Website/assets/images/316108166_452749393699009_5327315196689860143_n.jpg" alt="AboutMe">
-        <div class="aboutmetitle">
-            
+        
+        <div class="AboutmeWords">
+            <div class="Aboutmetitle">
+                <h1>About Me</h1>
+            </div>
+            <div class="Aboutmepara">
+                <p>When I was a young boy, my family and I would go to the beach, unlike other children my age who had buckets and would build sand castles, I would flip the buckets over and use the spade to “play the drums”. From that day on my parents noted my talent in music</p>
+            </div>
         </div>
     </div>
     </div>
