--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="Home">
             <h1>Home</h1>
         </div>
-            <div class="Blogs">
+        <div class="Blogs">
             <h1>Blogs</h1>
         </div>
         <div class="About">
@@ -26,7 +26,6 @@
         </div>
         <div class="Contact Me">
             <h1>Contact Us</h1>
-        </div>
         </div>
     </div>
 
@@ -40,13 +39,13 @@
 
     <div class="images">
         <div class="strummingimg">
-        <img src="Assignment-Website/assets/images/Strumming 2023.jpg" alt="strummingimg">
+            <img src="Assignment-Website/assets/images/Strumming 2023.jpg" alt="strummingimg">
         </div>
         <div class="originalimg">
-        <img src="Assignment-Website/assets/images/Original Songs.jpg" alt="originalimg">
+            <img src="Assignment-Website/assets/images/Original Songs.jpg" alt="originalimg">
         </div>
         <div class="coverimg">
-        <img src="Assignment-Website/assets/images/Cover Songs.jpg" alt="coverimg">
+            <img src="Assignment-Website/assets/images/Cover Songs.jpg" alt="coverimg">
         </div>
     </div>
 
@@ -73,9 +72,28 @@
             </div>
             <div class="Aboutmepara">
                 <p>When I was a young boy, my family and I would go to the beach, unlike other children my age who had buckets and would build sand castles, I would flip the buckets over and use the spade to “play the drums”. From that day on my parents noted my talent in music</p>
+                <div class="keepreading">
+                    <h1>Keep Reading</h1>
+                </div>
             </div>
+
         </div>
     </div>
+    
+    <div class="subscriptionbar">
+        <div class="subwords">
+            <h1>Subscribe to stay up to date with the latest updates!</h1>
+        </div>
+
+        <div class="box">
+            <h1>Insert Email...</h1>
+        </div>
+        
+        <div class="Submit">
+            <h1>Submit</h1>
+        </div>
     </div>
+
+    <div class="footer"></div>
 </body>
 </html>
