--- a/index.html
+++ b/index.html
@@ -94,6 +94,23 @@
         </div>
     </div>
 
-    <div class="footer"></div>
+    <div class="footer">
+        <div class="footerimage">
+        <img src="Assignment-Website/assets/images/Black Screen.jpg">
+        </div>
+        
+        <div class="Home1">
+            <h1>Home</h1>
+        </div>
+        <div class="Blogs1">
+            <h1>Blogs</h1>
+        </div>
+        <div class="AboutMe1">
+            <h1>About Me</h1>
+        </div>
+        <div class="Contact1">
+            <h1>Contact</h1>
+        </div>
+    </div>
 </body>
 </html>
