--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 
     <div class="navbar">
         <div class="logo">
-            <img src="Assignment-Website/assets/images/migzphotographycom-icon-only-white.png">
+            <a href="index.html"><img src="Assignment-Website/assets/images/migzphotographycom-icon-only-white.png"></a>
         </div>
         <div class="Home">
-            <h1>Home</h1>
+            <a href="index.html" target="_blank">Home</a>
         </div>
         <div class="Blogs">
-            <h1>Blogs</h1>
+            <a href="blogs.html" target="_blank">Blogs</a>
         </div>
         <div class="About">
-            <h1>About Us</h1>
+            <a href="aboutme.html" target="_blank">About Me</a>
         </div>
         <div class="Contact Me">
-            <h1>Contact Us</h1>
+            <a href="contact.html" target="_blank">Contact Me</a>
         </div>
     </div>
 
@@ -98,7 +98,7 @@
         <div class="footerimage">
         <img src="Assignment-Website/assets/images/Black Screen.jpg">
         </div>
-        
+
         <div class="Home1">
             <h1>Home</h1>
         </div>
