started Blog page and organized CSS files

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MigzMusic</title>
     <link rel="stylesheet" href= "Assignment-Website/assets/styles/style.css">
+    <link rel="stylesheet" href= "Assignment-Website/assets/styles/commonelements.css">
 </head>
 <body>
     <div class="queenimage">
