--- a/aboutme.html
+++ b/aboutme.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
+    <link rel="stylesheet" href="Assignment-Website/assets/styles/aboutmestyle.css">
+    <link rel="stylesheet" href= "Assignment-Website/assets/styles/commonelements.css">
+
 </head>
 <body>
     
