--- a/blogs.html
+++ b/blogs.html
@@ -5,27 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blogs</title>
     <link rel="stylesheet" href= "Assignment-Website/assets/styles/blogstyle.css">
+    <link rel="stylesheet" href= "Assignment-Website/assets/styles/commonelements.css">
+
 </head>
 <body>
 
-    <div class="ContactMe">
-        <h1>Contact Me</h1>
+    <div class="backgroundimg">
+        <img src="Assignment-Website/assets/images/Strumming 1.jpg">
     </div>
 
-    <div class="Name">
-        <h1>Name</h1>
+    <div class="navbar">
+        <div class="logo">
+            <a href="index.html"><img src="Assignment-Website/assets/images/migzphotographycom-icon-only-white.png"></a>
+        </div>
+        <div class="Home">
+            <a href="index.html" target="_blank">Home</a>
+        </div>
+        <div class="Blogs">
+            <a href="blogs.html" target="_blank">Blogs</a>
+        </div>
+        <div class="About">
+            <a href="aboutme.html" target="_blank">About Me</a>
+        </div>
+        <div class="Contact Me">
+            <a href="contact.html" target="_blank">Contact Me</a>
+        </div>
     </div>
 
-    <div class="Subject">
-        <h1>Subject</h1>
-    </div>
-
-    <div class="Email">
-        <h1>Insert Email</h1>
-    </div>
-
-    <div class="Message">
-        <h1>YourMessage></h1>
+    <div class="migzwork">
+        <h1></h1>
     </div>
 
 </body>
