finished Blog Page

--- a/aboutme.html
+++ b/aboutme.html
@@ -9,6 +9,34 @@
 
 </head>
 <body>
-    
+    <div class="navbar">
+        <div class="logo">
+            <a href="index.html"><img src="Assignment-Website/assets/images/migzphotographycom-icon-only-white.png"></a>
+        </div>
+        <div class="Home">
+            <a href="index.html" target="_blank">Home</a>
+        </div>
+        <div class="Portfolio">
+            <a href="portfolio.html" target="_blank">Portfolio</a>
+        </div>
+        <div class="About">
+            <a href="aboutme.html" target="_blank">About Me</a>
+        </div>
+        <div class="Contact Me">
+            <a href="contact.html" target="_blank">Contact Me</a>
+        </div>
+    </div>
+
+    <div class="aboutme">
+        <div class="MeettheArtist">
+            <h1>Meet the Artist</h1>
+        </div>
+
+        <div class="about">
+            Greetings, music enthusiasts! I'm [Artist's Name], thrilled to kickstart my journey as a solo music artist. Hailing from [City/Country], my music draws inspiration from everyday life and dreams, featuring a blend of [mention influences or genres] that creates a [describe the sound – e.g., soulful, introspective, upbeat] vibe.
+
+            This venture is all about authenticity and connecting through music. Join me on social media for updates, exclusive previews, and behind-the-scenes glimpses. Your presence makes this journey special.        </div>
+
+    </div>
 </body>
 </html>
