--- a/contact.html
+++ b/contact.html
@@ -5,17 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
     <link rel="stylesheet" href= "Assignment-Website/assets/styles/contactstyle.css">
+    <link rel="stylesheet" href= "Assignment-Website/assets/styles/commonelements.css">
+
 </head>
 <body>
-    <div class="navbar1">
+    <div class="navbar">
         <div class="logo">
             <a href="index.html"><img src="Assignment-Website/assets/images/migzphotographycom-icon-only-white.png"></a>
         </div>
         <div class="Home">
             <a href="index.html" target="_blank">Home</a>
         </div>
-        <div class="Blogs">
-            <a href="blogs.html" target="_blank">Blogs</a>
+        <div class="Portfolio">
+            <a href="portfolio.html" target="_blank">Portfolio</a>
         </div>
         <div class="About">
             <a href="aboutme.html" target="_blank">About Me</a>
