--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div class="Home">
             <a href="index.html" target="_blank">Home</a>
         </div>
-        <div class="Blogs">
-            <a href="blogs.html" target="_blank">Blogs</a>
+        <div class="Portfolio">
+            <a href="portfolio.html" target="_blank">Portfolio</a>
         </div>
         <div class="About">
             <a href="aboutme.html" target="_blank">About Me</a>
@@ -52,7 +52,7 @@
 
     <div class="labels">
         <div class="Strumming2023">
-            <h1>Strumming 2023</h1>
+            <h1>Strummin' 2023</h1>
         </div>
 
         <div class="Originalsongs">
@@ -72,7 +72,7 @@
                 <h1>About Me</h1>
             </div>
             <div class="Aboutmepara">
-                <p>When I was a young boy, my family and I would go to the beach, unlike other children my age who had buckets and would build sand castles, I would flip the buckets over and use the spade to “play the drums”. From that day on my parents noted my talent in music</p>
+                <p>When I was a young boy, my family and I would go to the beach, unlike other children my age who had buckets and would build sand castles, I would flip the buckets over and use the spade to “play the drums”. From that day on my parents noted my talent in music.</p>
                 <div class="keepreading">
                     <h1>Keep Reading</h1>
                 </div>
@@ -104,7 +104,7 @@
             <h1>Home</h1>
         </div>
         <div class="Blogs1">
-            <h1>Blogs</h1>
+            <h1>Portfolio</h1>
         </div>
         <div class="AboutMe1">
             <h1>About Me</h1>
