--- a/aboutme.html
+++ b/aboutme.html
@@ -33,10 +33,28 @@
         </div>
 
         <div class="about">
-            Greetings, music enthusiasts! I'm [Artist's Name], thrilled to kickstart my journey as a solo music artist. Hailing from [City/Country], my music draws inspiration from everyday life and dreams, featuring a blend of [mention influences or genres] that creates a [describe the sound – e.g., soulful, introspective, upbeat] vibe.
-
-            This venture is all about authenticity and connecting through music. Join me on social media for updates, exclusive previews, and behind-the-scenes glimpses. Your presence makes this journey special.        </div>
-
+            My name is Miguel Cassar, a solo music artist based in Malta. my music draws inspiration from everyday life and dreams. This venture is all about authenticity and connecting through music. Join me on social media for updates, exclusive previews, and behind-the-scenes glimpses. Your presence makes this journey special.        
+        </div>
     </div>
+
+    <div class="footer">
+        <div class="footerimage">
+        <img src="Assignment-Website/assets/images/Black Screen.jpg">
+        </div>
+
+        <div class="Home1">
+            <a href="index.html" target="_blank">Home</a>
+        </div>
+        <div class="Portfolio1">
+            <a href="portfolio.html" target="_blank">Portfolio</a>
+        </div>
+        <div class="AboutMe1">
+            <a href="aboutme.html" target="_blank">About Me</a>
+        </div>
+        <div class="Contact1">
+            <a href="contact.html" target="_blank">Contact Me</a>
+        </div>
+    </div>
+
 </body>
 </html>
