--- a/contact.html
+++ b/contact.html
@@ -34,19 +34,19 @@
     </div>
 
     <div class="Name">
-        <h1>Name</h1>
+        <input type="text" id="userInput" name="userInput" placeholder="Name">
     </div>
 
     <div class="Subject">
-        <h1>Subject</h1>
+        <input type="text" id="userInput" name="userInput" placeholder="Subject">
     </div>
 
     <div class="Email">
-        <h1>Insert Email</h1>
+        <input type="text" id="userInput" name="userInput" placeholder="Insert Email">
     </div>
 
     <div class="Message">
-        <h1>Your Message</h1>
+        <input type="text" id="userInput" name="userInput" placeholder="Your Message">
     </div>
 
     <div class="Submit">
@@ -60,16 +60,16 @@
         </div>
 
         <div class="Home1">
-            <h1>Home</h1>
+            <a href="index.html" target="_blank">Home</a>
         </div>
-        <div class="Blogs1">
-            <h1>Blogs</h1>
+        <div class="Portfolio1">
+            <a href="portfolio.html" target="_blank">Portfolio</a>
         </div>
         <div class="AboutMe1">
-            <h1>About Me</h1>
+            <a href="aboutme.html" target="_blank">About Me</a>
         </div>
         <div class="Contact1">
-            <h1>Contact</h1>
+            <a href="contact.html" target="_blank">Contact Me</a>
         </div>
     </div>
 </body>
