--- a/index.html
+++ b/index.html
@@ -35,32 +35,32 @@
     </div>
 
     <div class="listenhere">
-        <h1>Listen Here!</h1>
+        <a href="https://www.youtube.com/watch?v=-uToTLJjya0">Listen Here!</a>
     </div>
 
     <div class="images">
         <div class="strummingimg">
             <img src="Assignment-Website/assets/images/Strumming 2023.jpg" alt="strummingimg">
         </div>
-        <div class="originalimg">
-            <img src="Assignment-Website/assets/images/Original Songs.jpg" alt="originalimg">
-        </div>
         <div class="coverimg">
             <img src="Assignment-Website/assets/images/Cover Songs.jpg" alt="coverimg">
+        </div>
+        <div class="originalimg">
+            <img src="Assignment-Website/assets/images/Original Songs.jpg" alt="originalimg">
         </div>
     </div>
 
     <div class="labels">
         <div class="Strumming2023">
-            <h1>Strummin' 2023</h1>
-        </div>
-
-        <div class="Originalsongs">
-            <h1>Original Songs</h1>
+            <a href="portfolio.html#strummin">Strumming 2023</a>
         </div>
 
         <div class="Coversongs">
-            <h1>Cover Songs</h1>
+            <a href="portfolio.html#coversongs">Cover Songs</a>
+        </div>
+
+        <div class="Originalsongs">
+            <a href="portfolio.html#originalsongs">Original Songs</a>
         </div>
     </div>
 
@@ -74,7 +74,7 @@
             <div class="Aboutmepara">
                 <p>When I was a young boy, my family and I would go to the beach, unlike other children my age who had buckets and would build sand castles, I would flip the buckets over and use the spade to “play the drums”. From that day on my parents noted my talent in music.</p>
                 <div class="keepreading">
-                    <h1>Keep Reading</h1>
+                    <a href="aboutme.html">Keep Reading</a>
                 </div>
             </div>
 
@@ -87,12 +87,15 @@
         </div>
 
         <div class="box">
-            <h1>Insert Email...</h1>
+        <form action="mailto:juliaagius465@gmail.com" method="post" enctype="text/plain">
+        <input type="text" id="userInput" name="userInput" placeholder="Insert Email">
+         
+        <div class="Submit">
+        <button type="submit">Submit</button>    
+        </div>
+        </form>
         </div>
         
-        <div class="Submit">
-            <h1>Submit</h1>
-        </div>
     </div>
 
     <div class="footer">
@@ -101,16 +104,16 @@
         </div>
 
         <div class="Home1">
-            <h1>Home</h1>
+            <a href="index.html" target="_blank">Home</a>
         </div>
-        <div class="Blogs1">
-            <h1>Portfolio</h1>
+        <div class="Portfolio1">
+            <a href="portfolio.html" target="_blank">Portfolio</a>
         </div>
         <div class="AboutMe1">
-            <h1>About Me</h1>
+            <a href="aboutme.html" target="_blank">About Me</a>
         </div>
         <div class="Contact1">
-            <h1>Contact</h1>
+            <a href="contact.html" target="_blank">Contact Me</a>
         </div>
     </div>
 </body>
