--- a/portfolio.html
+++ b/portfolio.html
@@ -40,30 +40,30 @@
         <div class="strummingimg">
             <img src="Assignment-Website/assets/images/Strumming 2023.jpg" alt="strummingimg">
         </div>
-        <div class="originalimg">
-            <img src="Assignment-Website/assets/images/Original Songs.jpg" alt="originalimg">
-        </div>
         <div class="coverimg">
             <img src="Assignment-Website/assets/images/Cover Songs.jpg" alt="coverimg">
+        </div>
+        <div class="originalimg">
+            <img src="Assignment-Website/assets/images/Original Songs.jpg" alt="originalimg">
         </div>
     </div>
 
     <div class="labels">
         <div class="Strumming2023">
-            <h1>Strummin' 2023</h1>
-        </div>
-
-        <div class="Originalsongs">
-            <h1>Original Songs</h1>
+            <a href="portfolio.html#strummin">Strumming 2023</a>
         </div>
 
         <div class="Coversongs">
-            <h1>Cover Songs</h1>
+            <a href="portfolio.html#coversongs">Cover Songs</a>
+        </div>
+
+        <div class="Originalsongs">
+            <a href="portfolio.html#originalsongs">Original Songs</a>
         </div>
     </div>
 
-    <div class="strummin">
-        <div class="banner">
+    <div class="strummin" >
+        <div class="banner" id="strummin">
             <div class="bannershape">
                 <div class="bannertext">
                     <h1>Strummin' 2023</h1>
@@ -93,7 +93,7 @@
     </div>
 
     <div class="coversongs">
-        <div class="banner1">
+        <div class="banner1" id="coversongs">
             <div class="bannershape1">
                 <div class="bannertext1">
                     <h1>Cover Songs</h1>
@@ -123,7 +123,7 @@
     </div>
 
     <div class="originalsongs">
-        <div class="banner2">
+        <div class="banner2"  id="originalsongs">
             <div class="bannershape2">
                 <div class="bannertext2">
                     <h1>Original Songs</h1>
@@ -154,16 +154,16 @@
         </div>
 
         <div class="Home1">
-            <h1>Home</h1>
+            <a href="index.html" target="_blank">Home</a>
         </div>
-        <div class="Blogs1">
-            <h1>Portfolio</h1>
+        <div class="Portfolio1">
+            <a href="portfolio.html" target="_blank">Portfolio</a>
         </div>
         <div class="AboutMe1">
-            <h1>About Me</h1>
+            <a href="aboutme.html" target="_blank">About Me</a>
         </div>
         <div class="Contact1">
-            <h1>Contact</h1>
+            <a href="contact.html" target="_blank">Contact Me</a>
         </div>
     </div>
 
