finished contact page

--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,8 @@
     <div class="ContactMe">
         <h1>Contact Me</h1>
     </div>
-
+    <form action="mailto:juliaagius465@gmail.com" method="post" enctype="text/plain">
+        
     <div class="Name">
         <input type="text" id="userInput" name="userInput" placeholder="Name">
     </div>
@@ -50,8 +51,11 @@
     </div>
 
     <div class="Submit">
-        <h1>Submit</h1>
+        <button type="submit">Submit</button>    
     </div>
+    </form>
+
+    
     </div>
 
     <div class="footer">
