--- a/aboutme.html
+++ b/aboutme.html
@@ -11,7 +11,7 @@
 <body>
     <div class="navbar">
         <div class="logo">
-            <a href="index.html"><img src="Assignment-Website/assets/images/migzphotographycom-icon-only-white.png"></a>
+            <a href="index.html"><img src="Assignment-Website/assets/images/logo.png"></a>
         </div>
         <div class="Home">
             <a href="index.html" target="_blank">Home</a>
@@ -39,7 +39,7 @@
 
     <div class="footer">
         <div class="footerimage">
-        <img src="Assignment-Website/assets/images/Black Screen.jpg">
+        <img src="Assignment-Website/assets/images/blackscreen.jpg">
         </div>
 
         <div class="Home1">
