--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href= "Assignment-Website/assets/styles/commonelements.css">
 </head>
 <body>
-    <div class="queenimage">
-        <img src="Assignment-Website/assets/images/Queen image.png">
+    <div class="queenimg">
+        <img src="Assignment-Website/assets/images/queenimage.jpeg">
     </div>
 
     <div class="navbar">
         <div class="logo">
-            <a href="index.html"><img src="Assignment-Website/assets/images/migzphotographycom-icon-only-white.png"></a>
+            <a href="index.html"><img src="Assignment-Website/assets/images/logo.png"></a>
         </div>
         <div class="Home">
             <a href="index.html" target="_blank">Home</a>
@@ -40,13 +40,13 @@
 
     <div class="images">
         <div class="strummingimg">
-            <img src="Assignment-Website/assets/images/Strumming 2023.jpg" alt="strummingimg">
+            <img src="Assignment-Website/assets/images/strummingpinterest.jpg" alt="strummingimg">
         </div>
         <div class="coverimg">
-            <img src="Assignment-Website/assets/images/Cover Songs.jpg" alt="coverimg">
+            <img src="Assignment-Website/assets/images/coversongs.jpg" alt="coverimg">
         </div>
         <div class="originalimg">
-            <img src="Assignment-Website/assets/images/Original Songs.jpg" alt="originalimg">
+            <img src="Assignment-Website/assets/images/originalsongs.jpg" alt="originalimg">
         </div>
     </div>
 
@@ -65,7 +65,7 @@
     </div>
 
     <div class="AboutMe">
-        <img src="Assignment-Website/assets/images/316108166_452749393699009_5327315196689860143_n.jpg" alt="AboutMe">
+        <img src="Assignment-Website/assets/images/portrait.jpg" alt="AboutMe">
         
         <div class="AboutmeWords">
             <div class="Aboutmetitle">
@@ -100,7 +100,7 @@
 
     <div class="footer">
         <div class="footerimage">
-        <img src="Assignment-Website/assets/images/Black Screen.jpg">
+        <img src="Assignment-Website/assets/images/blackscreen.jpg">
         </div>
 
         <div class="Home1">
