--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
 
     <div class="images">
         <div class="strummingimg">
-            <img src="Assignment-Website/assets/images/strummingone.jpg" alt="strummingimg">
+            <img src="Assignment-Website/assets/images/strummingpinterest.jpg" alt="strummingimg">
         </div>
         <div class="coverimg">
             <img src="Assignment-Website/assets/images/coversongs.jpg" alt="coverimg">
@@ -75,7 +75,7 @@
 
         <div class="strummincontent">
             <div class="strumminimg1">
-                <img src="Assignment-Website/assets/images/Strummin-Opening-Night-50.jpg">
+                <img src="Assignment-Website/assets/images/strummingopennight.jpg">
             </div>
 
             <div class="strumminwords">
@@ -142,7 +142,7 @@
                     <p>Music is in the works! Be sure to follow on our Spotify Page to stay posted!</p>
                 </div>
                 <div class="FollowonSpotify">
-                    <a href="https://www.tiktok.com/@miguelcassar5">Follow on Spotify</a>
+                    <a href="https://www.tiktok.com/@miguelcassar5">Follow on Tiktok</a>
                 </div>
             </div>
         </div>
