--- a/portfolio.html
+++ b/portfolio.html
@@ -10,8 +10,10 @@
 </head>
 <body>
 
+    <div class="background">
     <div class="backgroundimg">
         <img src="Assignment-Website/assets/images/strummingone.jpg">
+    </div>
     </div>
 
     <div class="navbar">
