--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <body>
     <div class="navbar">
         <div class="logo">
-            <a href="index.html"><img src="Assignment-Website/assets/images/logo.png"></a>
+            <a href="index.html"><img src="Assignment-Website/assets/images/logo.png" alt="logo"></a>
         </div>
         <div class="Home">
             <a href="index.html" target="_blank">Home</a>
@@ -35,19 +35,19 @@
     <form action="mailto:juliaagius465@gmail.com" method="post" enctype="text/plain">
         
     <div class="Name">
-        <input type="text" id="userInput" name="userInput" placeholder="Name">
+        <input type="text" id="userInput1" placeholder="Name">
     </div>
 
     <div class="Subject">
-        <input type="text" id="userInput" name="userInput" placeholder="Subject">
+        <input type="text" id="userInput2" placeholder="Subject">
     </div>
 
     <div class="Email">
-        <input type="text" id="userInput" name="userInput" placeholder="Insert Email">
+        <input type="text" id="userInput3" placeholder="Insert Email">
     </div>
 
     <div class="Message">
-        <input type="text" id="userInput" name="userInput" placeholder="Your Message">
+        <input type="text" id="userInput4" placeholder="Your Message">
     </div>
 
     <div class="Submit">
@@ -60,7 +60,7 @@
 
     <div class="footer">
         <div class="footerimage">
-        <img src="Assignment-Website/assets/images/blackscreen.jpg">
+        <img src="Assignment-Website/assets/images/blackscreen.jpg" alt="footerimage">
         </div>
 
         <div class="Home1">
