--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     
     <div class="queenimg">
-        <img src="Assignment-Website/assets/images/queenimage.jpeg">
+        <img src="Assignment-Website/assets/images/queenimage.jpeg" alt="queenimg">
     </div>
 
     <div class="navbar">
         <div class="logo">
-            <a href="index.html"><img src="Assignment-Website/assets/images/logo.png"></a>
+            <a href="index.html"><img src="Assignment-Website/assets/images/logo.png" alt="logo"></a>
         </div>
         <div class="Home">
             <a href="index.html" target="_blank">Home</a>
@@ -101,7 +101,7 @@
 
     <div class="footer">
         <div class="footerimage">
-        <img src="Assignment-Website/assets/images/blackscreen.jpg">
+        <img src="Assignment-Website/assets/images/blackscreen.jpg" alt="footerimage">
         </div>
 
         <div class="Home1">
