--- a/portfolio.html
+++ b/portfolio.html
@@ -152,7 +152,7 @@
 
     <div class="footer">
         <div class="footerimage">
-        <img src="Assignment-Website/assets/images/blackscreen.jpg" alt="blackscreen">
+        <img src="Assignment-Website/assets/images/blackscreen.jpg" alt="footerimage">
         </div>
 
         <div class="Home1">
